  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2006-02-10   Christian Stimming <stimming@tuhh.de>

	* src/base/buffer.h, list.h: Improved documentation.

2006/02/10: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- finally fixed the spurious signature bug which sometimes caused HBCI
  signatures to be invalid


2006/02/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_NetLayer_WaitForStatus()
- fixed two bugs in PKCS1 padding


2006/02/07: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- declare GWEN_Random() public


===========================================================================
MARK: released gwenhywfar-1.99.7 (2006/02/06)
===========================================================================


2006/02/06: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a test executable (for now only checks base64 code)


2006-02-06   Christian Stimming <stimming@tuhh.de>

	* src/os/{posix,windows}/fslock.c: Free strdup'd string to fix a
	memory leak.


2006/02/03: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions GWEN_NetLayerHttp_GetHttpVersion()
  and GWEN_NetLayerHttp_SetHttpVersion()
- fixed a bug in GWEN_InetSocket_Accept_Wait (was waiting for writeability,
  should rather wait for readability)
- fixed another bug in GWEN_InetSocket_Accept_Wait(): Was closing socket
  even wif the error simply was a timeout
- netlayers can now take over already connected baseLayers
- OpenHBCI CryptToken: