@@ -7,9 +7,15 @@
   !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
   ------------------------------------------------------------------------
 
+2006/02/14: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- removed debug messages in ct_file.c
+
+
 2006-02-10   Christian Stimming <stimming@tuhh.de>
 
 	* src/base/buffer.h, list.h: Improved documentation.
+
 
 2006/02/10: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
